Sales class created; activity_inventory.xml added; activity_sales.xml added; InventoryActivity added; SalesActivity added; TrackingActivity buttons to InventoryActivity and SalesActivity added;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="false"/>
+        <activity
+            android:name=".InventoryActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".SalesActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
