--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
             android:exported="false"/>
         <activity
             android:name=".ListingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SalesActivity"
+            android:exported="true" />
+        <activity
+            android:name=".InventoryActivity"
             android:exported="true" >
         </activity>
     </application>
