--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET">
-    </uses-permission>
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES">
-    </uses-permission>
-    <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED">
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"></uses-permission>
+    <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -19,16 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Farmily"
         tools:targetApi="31">
-
+        <activity
+            android:name=".cartActivity"
+            android:exported="false" />
         <activity
             android:name=".ProductListActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".TrackingActivity"
             android:exported="false" />
@@ -37,7 +36,7 @@
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ListingActivity"
             android:exported="true" />
@@ -46,7 +45,8 @@
             android:exported="true" />
         <activity
             android:name=".InventoryActivity"
-            android:exported="true" >
+            android:exported="true">
+
         </activity>
     </application>
 
