--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".PaymentActivity"
             android:exported="false" />
         <activity
-            android:name=".cartActivity"
+            android:name=".CartActivity"
             android:exported="false" />
         <activity
             android:name=".ProductListActivity"
